Used overflow: scroll on the tribute side to avoid using 'float' for the left side.

--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -10,26 +10,29 @@ body {
 #container {
 	display: grid;
 	grid-template-columns: 240px minmax(480px, 100%);
+  height: 800px;
 }
 
 #nav {
  border-style: solid none solid solid;
  background-color: gray;
+ overflow: scroll;
 }
 
 #tribute-info {
  /* background-color: blue; */
  /* opacity: .75; */
-border-style: solid;
+ border-style: solid;
  display: grid;
  grid-template-rows:
 	repeat(9, auto);
  padding: 20px;
+ overflow: scroll;
 }
 
 #menu {
 	/* background-color: green; */
-  position: fixed;
+  /* position: fixed; */
 	padding: 20px;
 	display: grid;
 	grid-template-rows:
